--- a/responsive_css.css
+++ b/responsive_css.css
@@ -26,6 +26,11 @@
       color: #361D1D;
       
     }
+.center {
+    margin: auto;
+    width: 322px;
+    
+}
 
     .dark{
       padding: 15px;
